Add Jenkins pipeline and update Nginx setup
Introduces a Jenkinsfile for CI/CD pipeline automation and a jenkins-docker-compose.yml for Jenkins deployment. Updates Dockerfile to use nginx:1.25.3-alpine for a lighter image. Modifies index.html to include a personalized message.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </style>
 </head>
 <body>
-    <h1>Nginx is Running Inside Docker!</h1>
+    <h1>Nginx is Running Inside Docker! 
+        thushara navod here 
+    </h1>
     <p>This page is being served instantly by an Nginx container.</p>
     <p>We skipped Terraform (Cloud) and Ansible (Server Config) by using Docker.</p>
 </body>
